# LSIE-MLF

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  workspace.json
.claude/: settings.json
.claude/agents/: dormant-surface-auditor.md  gate-failure-triager.md  product-designer.md  spec-compliance-reviewer.md  spec-work-item-auditor.md  ux-ui-specialist.md
.claude/commands/: audit.md  implement-file.md  implement-phase.md  verify-module.md  verify-spec.md
.claude/hooks/: post-edit.sh  pre-edit.sh
.github/: DEPENDABOT_PROCESS.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy_designer_portal.yml  docker-build.yml  gpu_replay_parity.yml  gpu_replay_trusted_dispatch.yml  release.yml
automation/schemas/: spec_work_item.py  ux_plan.py
data/sql/: 01-schema.sql  02-seed-experiments.sql  03-encounter-log.sql  03-physiology.sql  04-metrics-observational-acoustics.sql  05-attribution.sql
docs/: DEFERRED_INTEGRATIONS.md  DEVELOPER_SETUP.md  POST_MERGE_PLAYBOOK.md  SPEC_AMENDMENTS.md  SPEC_REFERENCE.md  V4_SPEC_DRAFTS.md
docs/artifacts/: HARDENING_SUMMARY.md  OPERATOR_CONSOLE_UI_UX_AUDIT.md  performance_baseline.md
docs/operations/: aca_gpu_runner.md
docs/registries/: error_handling_matrix.yaml  variable_traceability.yaml
exports/bootstrap-2026-05-14/: export_manifest.json
exports/bootstrap-2026-05-14-fix1/: export_manifest.json
requirements/: api.txt  base.txt  cli.txt  worker.txt
scripts/: __init__.py  __main__.py  capture_html_reference.js  check.ps1  check.sh  check_schema_consistency.py  debug_e2e.sh  debug_studio.py  gate0_gpu_replay.py  generate_capture_fixture.py  generate_drift_report.js  generate_pyside_tokens.py  lsie_cli.py  publish_designer_export.py  render_console_screens.py  run_audit.py  run_fixture_benchmark.py  run_real_device_benchmark.py  spec_ref_check.py  verify_e2e.sh  verify_spec_signature.py
scripts/audit/: __init__.py  registry.py  results.py  spec_items.py
services/api/: Dockerfile  __init__.py  main.py
services/cloud_api/: Dockerfile  __init__.py  main.py
services/desktop_app/: __main__.py  drift.py  os_adapter.py  process_graph.py  startup_timing.py
services/desktop_launcher/: __init__.py  health_check.py  install_manager.py  manifest.py  preflight.py  preflight_codes.py  repair.py  ui.py
services/operator_console/: __init__.py  __main__.py  api_client.py  app.py  config.py  event_client.py  formatters.py  polling.py  state.py  theme.py  workers.py
services/stream_ingest/: Dockerfile  entrypoint.sh
services/worker/: Dockerfile  __init__.py  celery_app.py  dashboard.py  (+3 more)
tests/: conftest.py
(+372 files in other folders)
