[project]
name = "lsie-mlf-desktop"
version = "4.0.0"
requires-python = "==3.11.*"
dependencies = [
    # ML-adjacent runtime utilities (heavy GPU wheels hydrate via ml_backend extra)
    "transformers==4.46.*",
    "opencv-python>=4.10,<5.0",
    "av==12.3.*",
    "praat-parselmouth==0.4.4",
    "spacy==3.7.*",
    "openai>=1.0.0",

    # Math and data runtime
    "numpy==1.26.*",
    "scipy==1.13.*",
    "pandas==2.2.*",

    # API and state runtime
    "fastapi==0.136.*",
    "uvicorn==0.29.*",
    "pydantic>=2.0",
    "psycopg2-binary==2.9.*",
    "python-dotenv==1.2.*",
    "async-timeout==4.0.3",
    "pycryptodome>=3.20.0",

    # Desktop UI and CLI runtime
    "PySide6>=6.11,<7.0",
    "typer>=0.12,<1.0",
    "rich>=13,<15",
    "psutil>=5.9",

    # External integrations
    "patchright==1.58.2",
    "TikTokLive==5.0.*",

    # Desktop runtime and cloud sync
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "pywin32; sys_platform == 'win32'",
]

[project.optional-dependencies]
ml_backend = [
    "torch==2.4.*",
    "ctranslate2>=4.5.0",
    "faster-whisper==1.2.1",
    "mediapipe==0.10.9",
    "sentence-transformers==3.2.*",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.11",
    "ruff>=0.6",
    "types-psutil",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-x -q --tb=short --strict-markers"
pythonpath = ["."]
markers = [
    "unit: Unit tests with no external dependencies",
    "integration: Tests requiring PostgreSQL or Redis",
    "gpu: Tests requiring CUDA GPU access",
    "audit_item(item_id): Bind a test to a §13 audit checklist item",
]
filterwarnings = [
    # spacy 3.7.x imports a click internal path that click 8.3 deprecated
    # for click 9.0. We pin spacy==3.7.x per §10.2 and cannot upgrade
    # until a spec amendment. Scope the filter to the spacy module so
    # real DeprecationWarnings elsewhere still surface.
    "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning:spacy",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]
ignore = ["ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["packages", "services"]